--- a/user_dashboard/tvshow.html
+++ b/user_dashboard/tvshow.html
@@ -82,19 +82,19 @@
                             <div class="profile-links">
                                 <a href="#" class="profile-item d-flex flex-middle">
                                     <img src="../images/icons/user1.png" alt="user profile icon" class="user-icon">
-                                    <span>Rajesh</span>
+                                    <span>Punit</span>
                                 </a>
                                 <a href="#" class="profile-item d-flex flex-middle">
                                     <img src="../images/icons/user2.png" alt="user profile icon" class="user-icon">
-                                    <span>Karan</span>
+                                    <span>Swapnil</span>
                                 </a>
                                 <a href="#" class="profile-item d-flex flex-middle">
                                     <img src="../images/icons/user3.png" alt="user profile icon" class="user-icon">
-                                    <span>Pappy</span>
+                                    <span>Vaishvi</span>
                                 </a>
                                 <a href="#" class="profile-item d-flex flex-middle" style="margin-bottom: 13px;">
                                     <img src="../images/icons/user4.png" alt="user profile icon" class="user-icon">
-                                    <span>Denny</span>
+                                    <span>Zaid</span>
                                 </a>
                                 <a href="#" class="profile-item last" >Manage Profiles</a>
                             </div>
